tests/semantic/comp_relation/comp_relation.dl
.comp A {
.decl X(a:number,b:number) output 
X(1,2).
}

.comp B : A {
.decl X(a:number,b:number) output 
X(1,2).
}


.init b = B

